--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <img src="C:\Users\annal\Desktop\site\photo.webp" alt="img">
+    <img src="/photo.webp" alt="img">
 </body>
 </html>
