--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
-
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <http-equiv="Content-Type" content="charset-windows-1251" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css" type="text/css" />
-<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
     <img src="/photo.webp" alt="img">
+    
 </body>
 </html>
+
