--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img src="/photo.webp" alt="img">    
+    <img src="./photo.webp" alt="img">    
 </body>
 </html>
 
