--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img src="/13 (1).png" alt="image">
+    <img src="./photo.png" alt="image">
 </body>
 </html>
 
